# C-Vector-Database-and-RAG-Engine

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  PROJECT_MASTER_DOCUMENTATION.md  README.md  USAGE_GUIDE.md  build.bat  index.html  run.tex
include/: api_server.hpp  brute_force.hpp  chunker.hpp  config.hpp  demo_data.hpp  distances.hpp  document_db.hpp  hnsw.hpp  http_common.hpp  json_utils.hpp  kd_tree.hpp  logging.hpp  ollama_client.hpp  types.hpp  vector_db.hpp
src/: api_server.cpp  main.cpp
